--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "git":"git add .  && git commit -m 'update' && git push"
+
   },
   "dependencies": {
     "react": "^18",
